--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,20 @@ ipch/
 *.cachefile
 *.VC.db
 *.VC.VC.opendb
+node_modules/**/*
+.expo/*
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+web-report/
+
+# macOS
+.DS_Store
 
 # Visual Studio profiler
 *.psess
